--- a/scaffold.ipynb
+++ b/scaffold.ipynb
@@ -23,15 +23,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get API Key\n",
     "import os\n",
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "if not OPEN_API_KEY:\n",
     "    print(\"OpenAI API Key not found\")\n",
     "\n",
-    "from langchain.llms import OpenAI\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import re\n",
+    "import datetime\n",
+    "from sklearn import preprocessing, impute\n",
+    "\n",
+    "# Langchain imports\n",
     "from langchain.chat_models import ChatOpenAI  \n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.schema import HumanMessage"
+    "from langchain.schema import HumanMessage, SystemMessage"
    ]
   },
   {
@@ -67,50 +75,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_feature(df, user_query):\n",
+    "def feature_function(df, user_query):\n",
     "    \"\"\"\n",
     "    Main function that gets called by the main router.\n",
     "    MUST take (user_query, df) and return df\n",
     "    \"\"\"\n",
     "    \n",
-    "    # TODO: Create helper docs (Reimplement with real)\n",
+    "    # TODO: Create helper docs (Reimplement with functions)\n",
     "    helper_docs = \"\"\"\n",
     "    - helper_function_1(): [description] \n",
     "    - helper_function_2(): [description]\n",
     "    \"\"\"\n",
     "    \n",
-    "    # LLM Prompt\n",
-    "    prompt = f\"\"\"\n",
-    "    Dataset: {df.shape}\n",
-    "    Columns: {list(df.columns)}\n",
-    "    User wants: {user_query}\n",
+    "    # Create message chain\n",
+    "    messages = []\n",
+    "    messages.append(SystemMessage(content=f\"\"\"\n",
+    "    You are a data cleaning agent.\n",
+    "    \n",
+    "    Dataset info: Shape: {df.shape}, Sample: {df.head(3).to_string()}\n",
     "    \n",
     "    Helper functions available:\n",
     "    {helper_docs}\n",
+    "\n",
+    "    Libraries available:\n",
+    "    - pd (pandas), np (numpy)\n",
+    "    - math, re, datetime\n",
+    "    - preprocessing, impute (from sklearn)\n",
     "    \n",
-    "    Generate pandas code using helpers where possible. Return only code.\n",
-    "    \"\"\"\n",
+    "    Rules:\n",
+    "    - Return only executable Python code, no explanations, no markdown blocks\n",
+    "    - Use helper functions where possible\n",
+    "    - Store final result in 'result_df'\n",
+    "    - No explanations, just code\n",
+    "    \"\"\"))\n",
+    "    messages.append(HumanMessage(content=f\"User request: {user_query}\"))\n",
     "    \n",
-    "    # Call LLM\n",
-    "    llm = ChatOpenAI(temperature=0, model_name=\"gpt-3.5-turbo\") # gpt-3.5 for development\n",
-    "    response = llm.invoke([HumanMessage(content=prompt)])\n",
+    "    # Call LLM with message chain\n",
+    "    llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o-mini\")\n",
+    "    response = llm.invoke(messages)\n",
     "    generated_code = response.content.strip()\n",
     "    \n",
     "    # Execute code\n",
     "    try:\n",
-    "        exec_env = {\n",
-    "            'df': df.copy(),\n",
-    "            'pd': pd,\n",
-    "            'np': np,\n",
-    "            'helper_function_1': helper_function_1, # TODO: REPLACE WITH FUNCTION\n",
-    "            'helper_function_2': helper_function_2, # TODO: REPLACE WITH FUNCTION\n",
-    "            'result_df': df.copy()\n",
-    "        }\n",
-    "        exec(generated_code,exec_env)\n",
-    "        return exec_env['result_df']\n",
+    "        original_df = df.copy()\n",
+    "        exec(generated_code)\n",
+    "        return df\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
-    "        return df"
+    "        print(f\"Generated Code:{generated_code}\")\n",
+    "        return original_df"
    ]
   },
   {
@@ -124,13 +137,13 @@
     "\n",
     "## Import Data\n",
     "\n",
-    "## Run code\n"
+    "## Run code"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "data-cleaning-agent",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
