--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,132 @@
    "execution_count": null,
    "id": "ff1ec261",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: import-ipynb in /opt/homebrew/anaconda3/lib/python3.12/site-packages (0.2)\n",
+      "Requirement already satisfied: IPython in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from import-ipynb) (8.25.0)\n",
+      "Requirement already satisfied: nbformat in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from import-ipynb) (5.9.2)\n",
+      "Requirement already satisfied: decorator in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (0.18.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (0.1.6)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (2.15.1)\n",
+      "Requirement already satisfied: stack-data in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (0.2.0)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (5.14.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from IPython->import-ipynb) (4.8.0)\n",
+      "Requirement already satisfied: fastjsonschema in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from nbformat->import-ipynb) (2.16.2)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from nbformat->import-ipynb) (4.19.2)\n",
+      "Requirement already satisfied: jupyter-core in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from nbformat->import-ipynb) (5.7.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jedi>=0.16->IPython->import-ipynb) (0.8.3)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->import-ipynb) (23.1.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->import-ipynb) (2023.7.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->import-ipynb) (0.30.2)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->import-ipynb) (0.10.6)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pexpect>4.3->IPython->import-ipynb) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->IPython->import-ipynb) (0.2.5)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jupyter-core->nbformat->import-ipynb) (3.10.0)\n",
+      "Requirement already satisfied: executing in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from stack-data->IPython->import-ipynb) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from stack-data->IPython->import-ipynb) (2.0.5)\n",
+      "Requirement already satisfied: pure-eval in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from stack-data->IPython->import-ipynb) (0.2.2)\n",
+      "Requirement already satisfied: six in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from asttokens->stack-data->IPython->import-ipynb) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pandas in /opt/homebrew/anaconda3/lib/python3.12/site-packages (2.2.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: numpy in /opt/homebrew/anaconda3/lib/python3.12/site-packages (1.26.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting sklearn\n",
+      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
+      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
+      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
+      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
+      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
+      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
+      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
+      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
+      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
+      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m More information is available at\n",
+      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: langchain in /opt/homebrew/anaconda3/lib/python3.12/site-packages (0.3.27)\n",
+      "Requirement already satisfied: langchain-community in /opt/homebrew/anaconda3/lib/python3.12/site-packages (0.3.27)\n",
+      "Requirement already satisfied: openai in /opt/homebrew/anaconda3/lib/python3.12/site-packages (1.101.0)\n",
+      "Requirement already satisfied: langchain-core<1.0.0,>=0.3.72 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (0.3.74)\n",
+      "Requirement already satisfied: langchain-text-splitters<1.0.0,>=0.3.9 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (0.3.9)\n",
+      "Requirement already satisfied: langsmith>=0.1.17 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (0.4.16)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (2.11.7)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (2.0.30)\n",
+      "Requirement already satisfied: requests<3,>=2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (2.32.2)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain) (6.0.1)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (3.9.5)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (8.2.2)\n",
+      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (0.6.7)\n",
+      "Requirement already satisfied: pydantic-settings<3.0.0,>=2.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (2.10.1)\n",
+      "Requirement already satisfied: httpx-sse<1.0.0,>=0.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (0.4.1)\n",
+      "Requirement already satisfied: numpy>=1.26.2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-community) (1.26.4)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (4.2.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (0.27.0)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (0.10.0)\n",
+      "Requirement already satisfied: sniffio in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (1.3.0)\n",
+      "Requirement already satisfied: tqdm>4 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (4.66.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from openai) (4.14.1)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.2.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (23.1.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.4.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (6.0.4)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.9.3)\n",
+      "Requirement already satisfied: idna>=2.8 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from anyio<5,>=3.5.0->openai) (3.7)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain-community) (3.26.1)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain-community) (0.9.0)\n",
+      "Requirement already satisfied: certifi in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
+      "Requirement already satisfied: httpcore==1.* in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from httpx<1,>=0.23.0->openai) (1.0.2)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-core<1.0.0,>=0.3.72->langchain) (1.33)\n",
+      "Requirement already satisfied: packaging>=23.2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langchain-core<1.0.0,>=0.3.72->langchain) (23.2)\n",
+      "Requirement already satisfied: orjson>=3.9.14 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langsmith>=0.1.17->langchain) (3.11.2)\n",
+      "Requirement already satisfied: requests-toolbelt>=1.0.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langsmith>=0.1.17->langchain) (1.0.0)\n",
+      "Requirement already satisfied: zstandard>=0.23.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from langsmith>=0.1.17->langchain) (0.24.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.4.1)\n",
+      "Requirement already satisfied: python-dotenv>=0.21.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain-community) (0.21.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from requests<3,>=2->langchain) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from requests<3,>=2->langchain) (2.2.2)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.72->langchain) (2.1)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community) (1.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# install necesary packages\n",
     "%pip install import-ipynb\n",
@@ -13,12 +138,13 @@
     "%pip install pandas\n",
     "%pip install numpy\n",
     "%pip install sklearn\n",
-    "%pip install langchain langchain-community openai"
+    "%pip install langchain langchain-community openai\n",
+    "%pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3fd337c0",
    "metadata": {},
    "outputs": [],
@@ -26,9 +152,12 @@
     "# Lang chain imports\n",
     "from langchain.chat_models import ChatOpenAI  \n",
     "from langchain.schema import HumanMessage, SystemMessage\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "# Get API KEY\n",
     "import os\n",
+    "\n",
+    "load_dotenv()\n",
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "if not OPENAI_API_KEY:\n",
     "    print(\"OpenAI API Key not found\")\n",
@@ -132,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-cleaning-agent",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
