added basic stats generating helper function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -13,12 +13,13 @@
     "Generates statistical summaries including descriptive statistics (mean, median, mode, variance, std, quartiles), distribution analysis, correlation matrices, and basic visualisations for dataset exploration.\n",
     "\n",
     "### **Helper Functions**\n",
-    "- calculate_basic_stats(): Basic descriptive statistics\n",
-    "- calculate_five_number_summary(): Min, Q1, median, Q3, max\n",
-    "- calculate_mode_stats(): Mode and frequency analysis\n",
-    "- generate_correlation_matrix(): Correlation analysis for numeric columns\n",
-    "- create_distribution_plots(): Histograms and distribution visualisations\n",
-    "- analyze_categorical_columns(): Frequency tables for categorical data"
+    "- calculate_basic_stats(df, columns=None): Calculate mean, median, std, variance, skewness, kurtosis for numeric columns\n",
+    "- calculate_five_number_summary(df, columns=None): Calculate min, Q1, median, Q3, max, IQR for numeric columns\n",
+    "- calculate_mode_stats(df, columns=None): Calculate mode, frequency, unique values for all columns\n",
+    "- generate_correlation_matrix(df, method='pearson'): Create correlation matrix and heatmap for numeric columns\n",
+    "- create_distribution_plots(df, columns=None, max_plots=6): Create histograms for numeric columns\n",
+    "- analyze_categorical_columns(df, columns=None, top_n=5): Analyze categorical columns with frequency tables\n",
+    "    \"\"\""
    ]
   },
   {
@@ -59,10 +60,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def helper_function_1(df, param=None):\n",
-    "    \"\"\"What this helper does\"\"\"\n",
-    "    # Your code here\n",
-    "    return df"
+    "def calculate_basic_stats(df, columns=None):\n",
+    "    \"\"\"Calculate basic descriptive statistics for numeric columns like mean, median, std, variance, skewness, kurtosis for numeric columns\"\"\"\n",
+    "    if columns is None:\n",
+    "        numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    else:\n",
+    "        numeric_cols = [col for col in columns if col in df.columns and df[col].dtype in ['int64', 'float64']]\n",
+    "    \n",
+    "    stats_dict = {}\n",
+    "    for col in numeric_cols:\n",
+    "        stats_dict[col] = {\n",
+    "            'count': df[col].count(),\n",
+    "            'mean': df[col].mean(),\n",
+    "            'median': df[col].median(),\n",
+    "            'std': df[col].std(),\n",
+    "            'variance': df[col].var(),\n",
+    "            'min': df[col].min(),\n",
+    "            'max': df[col].max(),\n",
+    "            'skewness': df[col].skew(),\n",
+    "            'kurtosis': df[col].kurtosis()\n",
+    "        }\n",
+    "    \n",
+    "    return pd.DataFrame(stats_dict).T"
    ]
   },
   {
@@ -93,8 +112,12 @@
     "    \n",
     "    # TODO: Create helper docs (Reimplement with functions)\n",
     "    helper_docs = \"\"\"\n",
-    "    - helper_function_1(): [description] \n",
-    "    - helper_function_2(): [description]\n",
+    "    - calculate_basic_stats(df, columns=None): Calculate mean, median, std, variance, skewness, kurtosis for numeric columns\n",
+    "    - calculate_five_number_summary(df, columns=None): Calculate min, Q1, median, Q3, max, IQR for numeric columns\n",
+    "    - calculate_mode_stats(df, columns=None): Calculate mode, frequency, unique values for all columns\n",
+    "    - generate_correlation_matrix(df, method='pearson'): Create correlation matrix and heatmap for numeric columns\n",
+    "    - create_distribution_plots(df, columns=None, max_plots=6): Create histograms for numeric columns\n",
+    "    - analyze_categorical_columns(df, columns=None, top_n=5): Analyze categorical columns with frequency tables\n",
     "    \"\"\"\n",
     "    \n",
     "    # Create message chain\n",
@@ -110,6 +133,7 @@
     "    Libraries available:\n",
     "    - pd (pandas), np (numpy)\n",
     "    - math, re, datetime\n",
+    "    - matplotlib.pyplot (plt), seaborn (sns), scipy (stats)\n",
     "    - preprocessing, impute (from sklearn)\n",
     "    \n",
     "    Rules:\n",
