--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ff1ec261",
    "metadata": {},
    "outputs": [
@@ -127,6 +127,8 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from requests<3,>=2->langchain) (2.2.2)\n",
       "Requirement already satisfied: jsonpointer>=1.9 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.72->langchain) (2.1)\n",
       "Requirement already satisfied: mypy-extensions>=0.3.0 in /opt/homebrew/anaconda3/lib/python3.12/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community) (1.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: python-dotenv in /opt/homebrew/anaconda3/lib/python3.12/site-packages (0.21.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3fd337c0",
    "metadata": {},
    "outputs": [],
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5d628dfe",
    "metadata": {},
    "outputs": [],
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "a8051915",
    "metadata": {},
    "outputs": [],
@@ -238,22 +240,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "0389ce11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample data\n",
     "df = pd.read_csv('sample_data/smoke.csv')\n",
-    "user_query=\"Impute missing values and then find any outliers in the dataset\""
+    "user_query=\"Generate some summary statistics\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b59ec888",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0p/s0mk2hxn1tg33lrmprln9gh80000gn/T/ipykernel_7532/1102505369.py:34: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o-mini\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df = handle_missing_vals(\"impute missing values\", df); df = detect_outliers(\"find outliers in the dataset\", df)\n",
+      "Error: name 'handle_missing_vals' is not defined\n",
+      "Generated Code:df = handle_missing_vals(\"impute missing values\", df); df = detect_outliers(\"find outliers in the dataset\", df)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Smoke everyday</th>\n",
+       "      <th>Smoke some days</th>\n",
+       "      <th>Former smoker</th>\n",
+       "      <th>Never smoked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>15.60%</td>\n",
+       "      <td>6.30%</td>\n",
+       "      <td>23.90%</td>\n",
+       "      <td>54.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>13.50%</td>\n",
+       "      <td>6.80%</td>\n",
+       "      <td>26.10%</td>\n",
+       "      <td>53.60%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>10.70%</td>\n",
+       "      <td>4.40%</td>\n",
+       "      <td>27.90%</td>\n",
+       "      <td>57.10%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2100</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>17.30%</td>\n",
+       "      <td>5.60%</td>\n",
+       "      <td>24.10%</td>\n",
+       "      <td>53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>California</td>\n",
+       "      <td>7.50%</td>\n",
+       "      <td>4.60%</td>\n",
+       "      <td>23.10%</td>\n",
+       "      <td>64.80%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>871</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>18.70%</td>\n",
+       "      <td>2.70%</td>\n",
+       "      <td>25.20%</td>\n",
+       "      <td>53.50%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>872</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>17.50%</td>\n",
+       "      <td>2.40%</td>\n",
+       "      <td>29.90%</td>\n",
+       "      <td>50.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>873</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>23.70%</td>\n",
+       "      <td>1.90%</td>\n",
+       "      <td>23.30%</td>\n",
+       "      <td>51.10%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>874</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>18.20%</td>\n",
+       "      <td>3.50%</td>\n",
+       "      <td>27.60%</td>\n",
+       "      <td>50.70%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>875</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>19.10%</td>\n",
+       "      <td>2.90%</td>\n",
+       "      <td>26.80%</td>\n",
+       "      <td>51.20%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>876 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year          State Smoke everyday Smoke some days Former smoker  \\\n",
+       "0    2010             AL         15.60%           6.30%        23.90%   \n",
+       "1    2010             AK         13.50%           6.80%        26.10%   \n",
+       "2    2010             AZ         10.70%           4.40%        27.90%   \n",
+       "3    2100       Arkansas         17.30%           5.60%        24.10%   \n",
+       "4    2010     California          7.50%           4.60%        23.10%   \n",
+       "..    ...            ...            ...             ...           ...   \n",
+       "871  1995       Virginia         18.70%           2.70%        25.20%   \n",
+       "872  1995     Washington         17.50%           2.40%        29.90%   \n",
+       "873  1995  West Virginia         23.70%           1.90%        23.30%   \n",
+       "874  1995      Wisconsin         18.20%           3.50%        27.60%   \n",
+       "875  1995        Wyoming         19.10%           2.90%        26.80%   \n",
+       "\n",
+       "    Never smoked  \n",
+       "0         54.20%  \n",
+       "1         53.60%  \n",
+       "2         57.10%  \n",
+       "3            53%  \n",
+       "4         64.80%  \n",
+       "..           ...  \n",
+       "871       53.50%  \n",
+       "872       50.20%  \n",
+       "873       51.10%  \n",
+       "874       50.70%  \n",
+       "875       51.20%  \n",
+       "\n",
+       "[876 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "main(user_query, df)"
    ]
