added five number summary helper function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -86,16 +86,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "46a090e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def helper_function_2(series, method='default'):\n",
-    "    \"\"\"What this helper does\"\"\"\n",
-    "    # Your code here\n",
-    "    return series"
+    "def calculate_five_number_summary(df, columns=None):\n",
+    "    \"\"\"Calculate five number summary (min, Q1, median, Q3, max) for numeric columns\"\"\"\n",
+    "    if columns is None:\n",
+    "        numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    else:\n",
+    "        numeric_cols = [col for col in columns if col in df.columns and df[col].dtype in ['int64', 'float64']]\n",
+    "    \n",
+    "    summary_dict = {}\n",
+    "    for col in numeric_cols:\n",
+    "        summary_dict[col] = {\n",
+    "            'min': df[col].min(),\n",
+    "            'Q1': df[col].quantile(0.25),\n",
+    "            'median': df[col].median(),\n",
+    "            'Q3': df[col].quantile(0.75),\n",
+    "            'max': df[col].max(),\n",
+    "            'IQR': df[col].quantile(0.75) - df[col].quantile(0.25)\n",
+    "        }\n",
+    "    \n",
+    "    return pd.DataFrame(summary_dict).T"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dffed275",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -133,8 +156,9 @@
     "    Libraries available:\n",
     "    - pd (pandas), np (numpy)\n",
     "    - math, re, datetime\n",
-    "    - matplotlib.pyplot (plt), seaborn (sns), scipy (stats)\n",
     "    - preprocessing, impute (from sklearn)\n",
+    "    - plt (matplotlib.pyplot), sns (seaborn)\n",
+    "    - stats (from scipy)\n",
     "    \n",
     "    Rules:\n",
     "    - Return only executable Python code, no explanations, no markdown blocks\n",
