added frequency analysis helper function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -118,7 +118,25 @@
    "id": "dffed275",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_mode_stats(df, columns=None):\n",
+    "    \"\"\"Calculate mode and frequency statistics for all columns\"\"\"\n",
+    "    if columns is None:\n",
+    "        columns = df.columns\n",
+    "    \n",
+    "    mode_stats = {}\n",
+    "    for col in columns:\n",
+    "        if col in df.columns:\n",
+    "            mode_val = df[col].mode().iloc[0] if not df[col].mode().empty else None\n",
+    "            mode_stats[col] = {\n",
+    "                'mode': mode_val,\n",
+    "                'mode_frequency': df[col].value_counts().iloc[0] if not df[col].value_counts().empty else 0,\n",
+    "                'unique_values': df[col].nunique(),\n",
+    "                'most_frequent_values': df[col].value_counts().head(3).to_dict()\n",
+    "            }\n",
+    "    \n",
+    "    return mode_stats"
+   ]
   },
   {
    "cell_type": "code",
