added correlation matrix helper function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -141,6 +141,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9db6988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_correlation_matrix(df, method='pearson'):\n",
+    "    \"\"\"Generate correlation matrix and heatmap for numeric columns\"\"\"\n",
+    "    numeric_df = df.select_dtypes(include=[np.number])\n",
+    "    if numeric_df.empty:\n",
+    "        print(\"No numeric columns found for correlation analysis\")\n",
+    "        return None\n",
+    "    \n",
+    "    correlation_matrix = numeric_df.corr(method=method)\n",
+    "    \n",
+    "    # Create correlation heatmap\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', center=0, \n",
+    "                square=True, linewidths=0.5)\n",
+    "    plt.title(f'Correlation Matrix ({method.title()})')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    return correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "881f15c2",
    "metadata": {},
    "outputs": [],
