added distribution plot helper function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -168,6 +168,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0e57ec77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_distribution_plots(df, columns=None, max_plots=6):\n",
+    "    \"\"\"Create distribution plots for numeric columns\"\"\"\n",
+    "    if columns is None:\n",
+    "        numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    else:\n",
+    "        numeric_cols = [col for col in columns if col in df.columns and df[col].dtype in ['int64', 'float64']]\n",
+    "    \n",
+    "    numeric_cols = numeric_cols[:max_plots]  # Limit number of plots\n",
+    "    \n",
+    "    if len(numeric_cols) == 0:\n",
+    "        print(\"No numeric columns found for distribution plots\")\n",
+    "        return\n",
+    "    \n",
+    "    n_cols = min(3, len(numeric_cols))\n",
+    "    n_rows = math.ceil(len(numeric_cols) / n_cols)\n",
+    "    \n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(15, 5 * n_rows))\n",
+    "    if n_rows == 1 and n_cols == 1:\n",
+    "        axes = [axes]\n",
+    "    elif n_rows == 1:\n",
+    "        axes = axes\n",
+    "    else:\n",
+    "        axes = axes.flatten()\n",
+    "    \n",
+    "    for i, col in enumerate(numeric_cols):\n",
+    "        if i < len(axes):\n",
+    "            axes[i].hist(df[col].dropna(), bins=30, alpha=0.7, edgecolor='black')\n",
+    "            axes[i].set_title(f'Distribution of {col}')\n",
+    "            axes[i].set_xlabel(col)\n",
+    "            axes[i].set_ylabel('Frequency')\n",
+    "            axes[i].grid(True, alpha=0.3)\n",
+    "    \n",
+    "    # Hide empty subplots\n",
+    "    for i in range(len(numeric_cols), len(axes)):\n",
+    "        axes[i].set_visible(False)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "881f15c2",
    "metadata": {},
    "outputs": [],
