implemented get summaries function

--- a/features/Summaries.ipynb
+++ b/features/Summaries.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_function(df, user_query):\n",
+    "def get_summaries(df, user_query):\n",
     "    \"\"\"\n",
     "    Main function that gets called by the main router.\n",
     "    MUST take (user_query, df) and return df\n",
@@ -266,7 +266,7 @@
     "    # Create message chain\n",
     "    messages = []\n",
     "    messages.append(SystemMessage(content=f\"\"\"\n",
-    "    You are a data cleaning agent.\n",
+    "    You are a data cleaning agent trying to generate dataset summaries.\n",
     "    \n",
     "    Dataset info: Shape: {df.shape}, Sample: {df.head(3).to_string()}\n",
     "    \n",
@@ -284,7 +284,17 @@
     "    - Return only executable Python code, no explanations, no markdown blocks\n",
     "    - Use helper functions where possible\n",
     "    - Store final result in 'result_df'\n",
+    "    - Always print results using print() statements\n",
+    "    - For specific columns mentioned in query, pass them as lists to helper functions\n",
+    "    - Use df.copy() at the start to avoid modifying original\n",
+    "    - Set result_df = df at the end (even though df won't be modified for summaries)\n",
     "    - No explanations, just code\n",
+    "\n",
+    "    Examples:\n",
+    "    - \"show basic stats for age and income\" -> calculate_basic_stats(df, columns=['age', 'income'])\n",
+    "    - \"correlation matrix\" -> generate_correlation_matrix(df)\n",
+    "    - \"summary of all data\" -> use multiple helper functions\n",
+    "    - \"distribution plots\" -> create_distribution_plots(df)\n",
     "    \"\"\"))\n",
     "    messages.append(HumanMessage(content=f\"User request: {user_query}\"))\n",
     "    \n",
@@ -294,8 +304,25 @@
     "    generated_code = response.content.strip()\n",
     "    \n",
     "    # Execute code\n",
+    "    print(f\"Generated code for summaries:\\n{generated_code}\\n\")\n",
     "    try:\n",
     "        original_df = df.copy()\n",
+    "        exec_globals = {\n",
+    "            'df': df,\n",
+    "            'pd': pd,\n",
+    "            'np': np,\n",
+    "            'math': math,\n",
+    "            'plt': plt,\n",
+    "            'sns': sns,\n",
+    "            'stats': stats,\n",
+    "            'calculate_basic_stats': calculate_basic_stats,\n",
+    "            'calculate_five_number_summary': calculate_five_number_summary,\n",
+    "            'calculate_mode_stats': calculate_mode_stats,\n",
+    "            'generate_correlation_matrix': generate_correlation_matrix,\n",
+    "            'create_distribution_plots': create_distribution_plots,\n",
+    "            'analyze_categorical_columns': analyse_categorical_columns,\n",
+    "            'print': print\n",
+    "        }\n",
     "        exec(generated_code)\n",
     "        return df\n",
     "    except Exception as e:\n",
