--- a/main.ipynb
+++ b/main.ipynb
@@ -11,6 +11,7 @@
     "%pip install import-ipynb\n",
     "\n",
     "%pip install pandas\n",
+    "%pip install pint \n",
     "%pip install numpy\n",
     "%pip install sklearn\n",
     "%pip install langchain langchain-community openai"
